--- a/index.html
+++ b/index.html
@@ -3,37 +3,37 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>[Your Name] - Academic Portfolio</title>
+<title>Elnaz Abbasifar - Academic Portfolio</title>
 <style>
-/* ------------------------ */
-/* Basic Reset and Fonts */
-body, html { margin:0; padding:0; scroll-behavior: smooth; font-family: Arial, sans-serif; background:#f9fafb; color:#333; }
+/* Basic Reset */
+body, html { margin:0; padding:0; font-family: Arial,sans-serif; scroll-behavior: smooth; background:#f9fafb; color:#333; }
 a { text-decoration:none; color:#2563eb; }
 a:hover { text-decoration:underline; }
-/* ------------------------ */
+
 /* Header */
-header { background: linear-gradient(135deg, #4f46e5, #6366f1); color:white; text-align:center; padding:120px 20px; }
-header img { width: 180px; height:180px; border-radius:50%; object-fit:cover; border:4px solid white; margin-bottom:20px; box-shadow:0 8px 20px rgba(0,0,0,0.3);}
+header { background: linear-gradient(135deg, #4f46e5, #6366f1); color:white; text-align:center; padding:100px 20px; }
+header img { width:180px; height:180px; border-radius:50%; object-fit:cover; border:4px solid white; margin-bottom:20px; box-shadow:0 8px 20px rgba(0,0,0,0.3);}
 header h1 { font-size:3rem; margin-bottom:0.5rem; }
 header p { font-size:1.2rem; max-width:700px; margin:0 auto; line-height:1.5; }
-/* ------------------------ */
+
 /* Nav */
 nav { position:sticky; top:0; background:white; box-shadow:0 2px 6px rgba(0,0,0,0.1); z-index:20; }
 nav ul { display:flex; justify-content:center; gap:2rem; padding:1rem; margin:0; list-style:none; font-weight:bold; }
 nav a { color:#2563eb; transition:0.3s; }
 nav a:hover { color:#1d4ed8; }
-/* ------------------------ */
+
 /* Sections */
-section { padding:80px 20px; text-align:center; }
-section h2 { font-size:2.5rem; margin-bottom:2rem; }
-/* CV Section */
-.cv-section { max-width:900px; margin:0 auto; text-align:left; }
-.cv-section h3 { margin-top:1.5rem; color:#1e40af; }
-.cv-section ul { margin-left:1.2rem; margin-bottom:1rem; }
-/* Publications & Projects */
-.cards { display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:20px; max-width:1000px; margin:0 auto; }
-.card { background:white; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.1); transition:0.3s; }
-.card:hover { transform:scale(1.05); box-shadow:0 8px 25px rgba(0,0,0,0.2); }
+section { padding:60px 20px; text-align:center; }
+section h2 { font-size:2.2rem; margin-bottom:2rem; color:#1e40af; }
+.section-content { max-width:900px; margin:0 auto; text-align:left; }
+
+/* CV/Info cards */
+.card { background:white; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.1); margin-bottom:20px; transition:0.3s; }
+.card:hover { transform:scale(1.02); box-shadow:0 8px 25px rgba(0,0,0,0.2); }
+
+/* Grid for projects */
+.cards { display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:20px; }
+
 /* Carousel */
 .carousel { position:relative; overflow:hidden; max-width:900px; margin:0 auto; }
 .carousel-track { display:flex; transition:transform 0.5s ease-in-out; }
@@ -44,11 +44,11 @@ section h2 { font-size:2.5rem; margin-bottom:2rem; }
 .carousel-btn:hover { background:#1d4ed8; }
 .carousel-btn.left { left:10px; }
 .carousel-btn.right { right:10px; }
+
 /* Scroll animation */
 [data-animate] { opacity:0; transform:translateY(30px); transition:all 0.8s ease-out; }
 [data-animate].active { opacity:1; transform:translateY(0); }
-/* Contact */
-#contact p { margin:0.5rem 0; }
+
 /* Footer */
 footer { background:#4f46e5; color:white; padding:20px; text-align:center; }
 </style>
@@ -57,77 +57,116 @@ footer { background:#4f46e5; color:white; padding:20px; text-align:center; }
 
 <!-- Header -->
 <header>
-<img src="your-photo.jpg" alt="[Your Name]">
-<h1>[Your Name]</h1>
-<p>M.Sc. in IT Management (Advanced Information Systems) | B.Sc. in Computer Engineering – Software<br>
+<img src="https://via.placeholder.com/180" alt="Elnaz Abbasifar">
+<h1>Elnaz Abbasifar</h1>
+<p>M.Sc. in IT Management | B.Sc. in Computer Engineering – Software<br>
 Passionate about Machine Learning, Data Management, and advancing real-world evidence analytics.</p>
 </header>
 
 <!-- Navigation -->
 <nav>
 <ul>
-<li><a href="#cv">CV</a></li>
-<li><a href="#publications">Publications & Projects</a></li>
+<li><a href="#education">Education & Training</a></li>
+<li><a href="#research">Research Experience</a></li>
+<li><a href="#projects">Projects</a></li>
+<li><a href="#skills">Skills</a></li>
 <li><a href="#certificates">Certificates</a></li>
 <li><a href="#contact">Contact</a></li>
 </ul>
 </nav>
 
-<!-- CV Section -->
-<section id="cv" data-animate style="background:#eef2ff;">
-<h2>Curriculum Vitae</h2>
-<div class="cv-section">
-<h3>Education</h3>
+<!-- Education & Training -->
+<section id="education" data-animate style="background:#eef2ff;">
+<h2>Education & Training</h2>
+<div class="section-content">
+<div class="card">
+<h3>Academic Degrees</h3>
 <ul>
 <li>M.Sc. in IT Management (Advanced Information Systems)</li>
 <li>B.Sc. in Computer Engineering – Software</li>
 </ul>
-<h3>Skills</h3>
+</div>
+<div class="card">
+<h3>Summer Schools & Specialized Training</h3>
 <ul>
-<li>Data Management & Integration</li>
-<li>Machine Learning & Predictive Analytics</li>
-<li>Graph-based Data Analysis (GraphSAGE, PyTorch Geometric)</li>
-<li>Python, SQL, C#</li>
+<li>Artificial Intelligence Autumn School, Amirkabir University of Technology, Iran – Nov–Dec 2021</li>
+<li>Resource-Aware Machine Learning, 5th International Summer School, TU Dortmund University, Germany – Sep 2020</li>
+<li>Security of Things (SeThi 2020), University of Rostock, Germany – Aug–Sep 2020</li>
+<li>Lviv Data Science Summer School, Ukrainian Catholic University, Ukraine – Jul 2020</li>
 </ul>
-<h3>Experience</h3>
-<ul>
-<li>BPMS Developer – Process Automation & Data Analysis</li>
-<li>Worked on network analysis and workflow optimization</li>
-<li>Designed ML-based analytical workflows for real-world datasets</li>
-</ul>
+</div>
 </div>
 </section>
 
-<!-- Publications & Projects -->
-<section id="publications" data-animate>
-<h2>Publications & Projects</h2>
-<div class="cards">
+<!-- Research Experience -->
+<section id="research" data-animate>
+<h2>Research Experience</h2>
+<div class="section-content">
 <div class="card">
-<h3>Soft Computing in Bioinformatics: A Review</h3>
-<p>2nd International Conference on Advances in Engineering and Basic Sciences, London, UK, 2015</p>
-<a href="#">Read More</a>
+<h3>AI Researcher – Technology Studies Institute, Tehran, Iran (Feb – Sep 2021)</h3>
+<ul>
+<li>Conducted comparative analysis of global AI ecosystems, ranking sustainability indicators.</li>
+<li>Collaborated with interdisciplinary scientists to integrate insights across CS, policy, and management.</li>
+</ul>
 </div>
 <div class="card">
-<h3>Social Network Applications and Customer Trust</h3>
-<p>2nd International Conference on Interdisciplinary Studies in Management & Engineering, University of Tehran, 2020</p>
-<a href="#">Read More</a>
+<h3>Graduate Researcher (Master’s Thesis) – Payame Noor University, Tehran, Iran (2016 – 2018)</h3>
+<ul>
+<li>Conducted research on social network analysis as part of MSc thesis.</li>
+</ul>
+</div>
+</div>
+</section>
+
+<!-- Projects -->
+<section id="projects" data-animate style="background:#eef2ff;">
+<h2>Projects</h2>
+<div class="section-content cards">
+<div class="card">
+<h3>Tree-Structured Graph Classification with GNN – 2025</h3>
+<p>GCN using PyTorch Geometric to classify tree graphs.</p>
+<a href="#">GitHub Project Link</a>
 </div>
 <div class="card">
-<h3>[Your Project Title]</h3>
-<p>Brief description, tools used, outcomes.</p>
-<a href="#">Read More</a>
+<h3>Precision in Cardiovascular Risk Prediction – ShineTech, 2023</h3>
+<p>Lasso Regression model for cardiovascular risk prediction.</p>
+<a href="#">GitHub Project Link</a>
+</div>
+<div class="card">
+<h3>Advanced Prediction with Ensemble Learning – ShineTech, 2023</h3>
+<p>Mobile price prediction using Decision Trees and Random Forest.</p>
+<a href="#">GitHub Project Link</a>
+</div>
+<div class="card">
+<h3>EDA Seattle Area Traffic Collision Data – Data Circles, 2020</h3>
+<p>Analyzed traffic collision data to prioritize road improvements.</p>
+<a href="#">GitHub Project Link</a>
+</div>
+</div>
+</section>
+
+<!-- Skills -->
+<section id="skills" data-animate>
+<h2>Skills</h2>
+<div class="section-content">
+<div class="card">
+<ul>
+<li>Programming: Python, C#, SQL</li>
+<li>Libraries: NumPy, Pandas, Matplotlib, Seaborn, Scikit-learn, PyTorch Geometric</li>
+<li>Tools: SQL Server, Power BI, Git, Jupyter Notebook, Visual Studio, Google Colab</li>
+</ul>
 </div>
 </div>
 </section>
 
 <!-- Certificates Carousel -->
-<section id="certificates" data-animate style="background:#eef2ff;">
+<section id="certificates" data-animate>
 <h2>Certificates</h2>
 <div class="carousel" id="carousel">
 <div class="carousel-track" id="track">
-<div class="carousel-item"><img src="cert1.jpg" alt="Certificate 1"></div>
-<div class="carousel-item"><img src="cert2.jpg" alt="Certificate 2"></div>
-<div class="carousel-item"><img src="cert3.jpg" alt="Certificate 3"></div>
+<div class="carousel-item"><img src="https://via.placeholder.com/260x180?text=Cert+1" alt="Certificate 1"></div>
+<div class="carousel-item"><img src="https://via.placeholder.com/260x180?text=Cert+2" alt="Certificate 2"></div>
+<div class="carousel-item"><img src="https://via.placeholder.com/260x180?text=Cert+3" alt="Certificate 3"></div>
 </div>
 <button class="carousel-btn left" id="prev">‹</button>
 <button class="carousel-btn right" id="next">›</button>
@@ -138,42 +177,4 @@ Passionate about Machine Learning, Data Management, and advancing real-world evi
 <section id="contact" data-animate>
 <h2>Contact</h2>
 <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-<p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
-<p>GitHub: <a href="https://github.com/yourprofile" target="_blank">github.com/yourprofile</a></p>
-</section>
-
-<!-- Footer -->
-<footer>
-© 2025 [Your Name]. All rights reserved.
-</footer>
-
-<script>
-// Scroll animation
-function scrollAnimation() {
-  const elements = document.querySelectorAll('[data-animate]');
-  const triggerBottom = window.innerHeight * 0.85;
-  elements.forEach(el => {
-    const boxTop = el.getBoundingClientRect().top;
-    if(boxTop < triggerBottom) el.classList.add('active');
-  });
-}
-window.addEventListener('scroll', scrollAnimation);
-window.addEventListener('load', scrollAnimation);
-
-// Carousel
-const track = document.getElementById('track');
-const prev = document.getElementById('prev');
-const next = document.getElementById('next');
-const items = track.children;
-let index = 0;
-
-function updateCarousel() {
-  track.style.transform = `translateX(-${index*260}px)`;
-}
-prev.addEventListener('click', () => { index = (index===0?items.length-1:index-1); updateCarousel(); });
-next.addEventListener('click', () => { index = (index===items.length-1?0:index+1); updateCarousel(); });
-setInterval(()=>{ index = (index+1)%items.length; updateCarousel(); }, 3000);
-</script>
-
-</body>
-</html>
+<p>
