--- a/index.html
+++ b/index.html
@@ -94,11 +94,29 @@
     .project-meta{color:var(--muted);font-size:0.95rem;margin-bottom:8px}
     .project-link{font-weight:600;color:var(--accent);font-size:0.95rem}
 
-    /* Certificates carousel simple */
-    .carousel{display:flex;gap:12px;overflow:hidden;padding:8px 0;border-radius:10px}
-    .cert{min-width:220px;height:140px;background:#fff;border-radius:10px;display:flex;align-items:center;justify-content:center;box-shadow:0 6px 18px rgba(2,6,23,0.06)}
-    .cert img{max-width:100%;max-height:100%;object-fit:cover;border-radius:8px}
-
+    /* Certificates carousel (one-by-one slider with controls) */
+    .carousel-wrap { position: relative; overflow: hidden; }
+    .carousel-track { display:flex; gap:12px; transition: transform 0.6s cubic-bezier(.22,.9,.28,1); will-change: transform; padding:8px 0; }
+    .carousel-item { min-width: 100%; flex: 0 0 100%; display:flex; justify-content:center; align-items:center; box-sizing:border-box; }
+    .carousel-item .cert { width:100%; height:220px; display:flex; align-items:center; justify-content:center; border-radius:10px; overflow:hidden; }
+    .carousel-item img{ width:100%; height:100%; object-fit:cover; display:block; }
+    
+    /* controls */
+    .carousel-btn {
+      position:absolute; top:50%; transform:translateY(-50%);
+      background:var(--accent); color:#fff; border:none; width:40px; height:40px; border-radius:50%;
+      display:flex; align-items:center; justify-content:center; cursor:pointer; font-size:20px; box-shadow:0 6px 18px rgba(2,6,23,0.12);
+    }
+    .carousel-btn.prev { left:10px; }
+    .carousel-btn.next { right:10px; }
+    .carousel-btn:focus{outline:none; box-shadow:0 0 0 4px rgba(30,64,175,0.12);}
+    
+    /* desktop: show narrower item so next peeks */
+    @media(min-width:800px){
+      .carousel-item { min-width: 70%; flex: 0 0 70%; }
+      .carousel-track { padding-left: calc((100% - 70%)/2); } /* center first item */
+    }
+  
     /* Responsive */
     @media (max-width:900px){
       .sidebar{display:none}
