--- a/index.html
+++ b/index.html
@@ -5,90 +5,79 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Elnaz Abbasifar — Portfolio</title>
 
-  <!-- AOS CSS -->
+  <!-- AOS CSS (Animate On Scroll) -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <style>
+    /* ---------- Reset & Base ---------- */
     :root{
-      --sidebar-bg:#f0f0f0;
-      --text:#333333;
+      --text:#374151;
       --muted:#6b7280;
-      --card-bg:#ffffff;
       --accent:#1e40af;
+      --sidebar-bg:#f3f4f6;
+      --card-bg:#ffffff;
     }
     *{box-sizing:border-box}
-    html,body{height:100%;margin:0;padding:0;font-family: 'Segoe UI', Tahoma, Arial; background:#f8fafc;color:var(--text); -webkit-font-smoothing:antialiased; direction:ltr;}
+    html,body{height:100%;margin:0;padding:0;font-family:'Segoe UI', Tahoma, Arial, sans-serif; background:#f8fafc;color:var(--text); -webkit-font-smoothing:antialiased; direction:ltr;}
     a{color:var(--accent); text-decoration:none;}
     a:hover{text-decoration:underline}
 
     /* ---------- Layout ---------- */
     .layout{display:flex;min-height:100vh;}
-    
-    /* Sidebar */
-    .sidebar {
-      width: 280px;
-      background: var(--sidebar-bg);
-      padding: 40px 20px;
-      position: fixed;
-      top: 0; bottom: 0; left: 0;
-      overflow-y: auto;
-      border-right: 1px solid rgba(0,0,0,0.08);
-    }
-    .photo {
-      width: 130px;
-      height: 130px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 3px solid #eaeefb;
-      display: block;
-      margin: 0 auto 16px;
-      box-shadow: 0 8px 20px rgba(16,24,40,0.06);
-    }
-    .name { text-align:center; font-weight:700; font-size:1.25rem; margin-bottom:6px; }
-    .title { text-align:center; color:var(--muted); font-size:1rem; margin-bottom:20px; line-height:1.5; padding:0 8px; }
 
-    .sidebar-card {
-      background: #fff;
-      padding: 14px 12px;
-      border-radius: 10px;
-      margin-bottom: 18px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-    }
-    .sidebar-card h4 { margin-bottom: 10px; font-size:0.95rem; color:#111827; }
-    .sidebar-card ul { padding-left:1rem; margin:0; list-style: disc; }
-    .sidebar-card ul li { margin:6px 0; line-height:1.5; color:var(--text); font-size:0.95rem; }
-
-    /* Top Navbar */
-    .topnav{
+    /* ---------- Sidebar (Professional) ---------- */
+    .sidebar{
+      width:280px;
+      background:var(--sidebar-bg);
+      padding:30px 20px;
       position:fixed;
-      left:280px; right:0; top:0;
-      height:56px;
-      background:#ffffff;
-      border-bottom:1px solid rgba(0,0,0,0.04);
-      display:flex;
-      align-items:center;
-      gap:18px;
-      padding:0 28px;
-      z-index:40;
-    }
-    .topnav a{
+      left:0; top:0; bottom:0;
+      overflow-y:auto;
+      border-right:1px solid #d1d5db;
       color:var(--text);
-      font-weight:600;
-      padding:6px 10px;
-      border-radius:6px;
-      text-decoration:none;
-      transition:all .18s;
     }
-    .topnav a:hover{
-      color:var(--accent);
-      background:rgba(30,64,175,0.04);
-      text-decoration:none;
+    .sidebar-header{text-align:center;margin-bottom:30px;}
+    .sidebar-header .photo{
+      width:120px; height:120px;
+      border-radius:50%; object-fit:cover;
+      border:3px solid #e5e7eb;
+      box-shadow:0 6px 16px rgba(0,0,0,0.08);
+      margin-bottom:12px;
     }
+    .sidebar-header .name{
+      font-weight:700; font-size:1.25rem; color:#111827; line-height:1.3; margin-bottom:4px;
+    }
+    .sidebar-header .title{
+      font-size:0.9rem; color:var(--muted); line-height:1.4; margin:0 auto;
+    }
+    .sidebar-section{margin-bottom:28px;}
+    .sidebar-section h4{
+      font-size:0.95rem; font-weight:600; color:#111827;
+      border-bottom:1px solid #d1d5db; padding-bottom:6px; margin-bottom:12px;
+    }
+    .sidebar-section ul{list-style:none;padding:0;margin:0;}
+    .sidebar-section ul li{margin-bottom:8px;font-size:0.95rem;line-height:1.5;color:var(--text);}
+    .sidebar-section ul li a{color:#4b5563;text-decoration:none;}
+    .sidebar-section ul li a:hover{color:var(--accent);text-decoration:underline;}
+    .sidebar::-webkit-scrollbar{width:6px;}
+    .sidebar::-webkit-scrollbar-thumb{background-color:rgba(107,114,128,0.5);border-radius:3px;}
+    .sidebar::-webkit-scrollbar-track{background:transparent;}
 
-    /* Content */
+    /* ---------- Top Navbar (outside sidebar) ---------- */
+    .topnav{
+      position:fixed; left:280px; right:0; top:0;
+      height:56px; background:#ffffff;
+      border-bottom:1px solid rgba(0,0,0,0.04);
+      display:flex; align-items:center; gap:18px;
+      padding:0 28px; z-index:40;
+    }
+    .topnav a{color:var(--text); font-weight:600; padding:6px 10px; border-radius:6px; transition:all .18s; text-decoration:none;}
+    .topnav a:hover{color:var(--accent); background:rgba(30,64,175,0.04)}
+
+    /* ---------- Content ---------- */
     .content{
       margin-left:280px;
-      padding:90px 40px 60px 40px;
+      padding:90px 40px 60px 40px; 
       width:calc(100% - 280px);
     }
     section{margin-bottom:34px}
@@ -115,13 +104,13 @@
     .project-link{font-weight:600;color:var(--accent);font-size:0.95rem}
 
     /* Carousel */
-    .carousel { position:relative; overflow:hidden; max-width:900px; margin:0 auto; background:#f0f0f0; border-radius:10px; padding:14px 0;}
+    .carousel { position:relative; overflow:hidden; max-width:900px; margin:0 auto; }
     .carousel-track { display:flex; transition:transform 0.5s ease-in-out; }
     .carousel-item { flex:0 0 260px; margin-right:1rem; border-radius:8px; overflow:hidden; }
     .carousel-item img { width:100%; height:180px; object-fit:cover; transition:0.3s; }
     .carousel-item img:hover { transform:scale(1.05); }
-    .carousel-btn { position:absolute; top:50%; transform:translateY(-50%); background:#9ca3af; color:white; border:none; padding:8px 12px; border-radius:50%; cursor:pointer; font-size:1.5rem; transition:0.3s; }
-    .carousel-btn:hover { background:#6b7280; }
+    .carousel-btn { position:absolute; top:50%; transform:translateY(-50%); background:#6b7280; color:white; border:none; padding:8px 12px; border-radius:50%; cursor:pointer; font-size:1.5rem; transition:0.3s; }
+    .carousel-btn:hover { background:#4b5563; }
     .carousel-btn.left { left:10px; }
     .carousel-btn.right { right:10px; }
 
@@ -138,11 +127,13 @@
   <div class="layout">
     <!-- SIDEBAR -->
     <aside class="sidebar" role="complementary">
-      <img class="photo" src="https://drive.google.com/uc?id=1k43VJGulb0Wg5gd0VPmtVyAO72INtbX9" alt="Elnaz Abbasifar">
-      <div class="name">Elnaz Abbasifar</div>
-      <div class="title">M.Sc. in IT Management (Advanced Information Systems) — B.Sc. Computer Engineering (Software)</div>
+      <div class="sidebar-header">
+        <img class="photo" src="https://drive.google.com/uc?id=1k43VJGulb0Wg5gd0VPmtVyAO72INtbX9" alt="Elnaz Abbasifar">
+        <div class="name">Elnaz Abbasifar</div>
+        <div class="title">M.Sc. in IT Management (Advanced Information Systems)<br>B.Sc. Computer Engineering (Software)</div>
+      </div>
 
-      <div class="sidebar-card">
+      <div class="sidebar-section">
         <h4>Contact</h4>
         <ul>
           <li><strong>Email:</strong> <a href="mailto:e.abbasifar@outlook.com">e.abbasifar@outlook.com</a></li>
@@ -151,7 +142,7 @@
         </ul>
       </div>
 
-      <div class="sidebar-card">
+      <div class="sidebar-section">
         <h4>Skills</h4>
         <ul>
           <li>Programming: Python, C#, SQL</li>
@@ -320,12 +311,13 @@
     }
     prev.addEventListener('click', () => { index = (index===0?items.length-1:index-1); updateCarousel(); });
     next.addEventListener('click', () => { index = (index===items.length-1?0:index+1); updateCarousel(); });
-    updateCarousel();
+    setInterval(()=>{ index = (index+1)%items.length; updateCarousel(); },5000);
   </script>
 
-  <!-- AOS JS -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>AOS.init({once:true});</script>
+  <script>
+    AOS.init({duration:800, once:true});
+  </script>
 
 </body>
 </html>
