--- a/index.html
+++ b/index.html
@@ -218,9 +218,11 @@
         <h2 class="section-title">Certificates</h2>
         <div class="carousel" id="carousel">
           <div class="carousel-track" id="track">
-            <div class="carousel-item"><img src="https://drive.google.com/uc?id=1kdWuoe8-by-H8GenAK3H6iF_mSA3WexU" alt="Certificate 1"></div>
-            <div class="carousel-item"><img src="cert2.jpg" alt="Certificate 2"></div>
-            <div class="carousel-item"><img src="cert3.jpg" alt="Certificate 3"></div>
+            <div class="carousel-item"><img src="images/cert1.jpg" alt="Certificate 1"></div>
+            <div class="carousel-item"><img src="images/cert2.jpg" alt="Certificate 2"></div>
+            <div class="carousel-item"><img src="images/cert3.jpg" alt="Certificate 3"></div>
+            <div class="carousel-item"><img src="images/cert4.jpg" alt="Certificate 4"></div>
+            <div class="carousel-item"><img src="images/cert5.jpg" alt="Certificate 5"></div>
           </div>
           <button id="prev" class="carousel-btn left" aria-label="Previous">‹</button>
           <button id="next" class="carousel-btn right" aria-label="Next">›</button>
